--- a/style.css
+++ b/style.css
@@ -15,21 +15,26 @@ body {
     background-color: #c3b9b7;
 }
 
+
 .home {
     height: 100vh;
     width: 100%;
+    
+}
+.flexer
+{
+    background-color: green;
 }
 
 nav {
     display: flex;
     align-items: center;
-    justify-content: left;
     gap: 30%;
     padding-top: 15px;
     padding-left: 8%;
     padding-right: 8%;
     top: 0;
-    position: sticky;
+    
 }
 
 .logo {
@@ -64,6 +69,9 @@ nav ul li a:hover {
     top: 50%;
     left: 8%;
     transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+
 }
 
 h1 {
@@ -215,10 +223,7 @@ h5 {
 }
 
 .photo {
-    float: right;
-    margin-right: 50px;
-    margin-top: 110px;
-
+     float: right;
 }
 
 .grad {
